# FECG

./: CenterLoss.py  FromDatToMat_NIFEA.py  FromDatToMat_NiFECGDB.py  README.md  convertCsv2Mat_yarden6.py  dataloader_sheba.py  main.py  requirements.txt
backend/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  run_docker.py  run_docker.spec
backend/server/: __init__.py
backend/server/routes/: routes.py
sheba_real_signals_1024windows_07_Feb_24_Abdomen/: 221023 RH 356_win_0.mat  221023 RH 356_win_1.mat  221023 RH 356_win_10.mat  221023 RH 356_win_11.mat  221023 RH 356_win_12.mat  221023 RH 356_win_13.mat  221023 RH 356_win_14.mat  221023 RH 356_win_15.mat  221023 RH 356_win_16.mat  221023 RH 356_win_17.mat  221023 RH 356_win_18.mat  221023 RH 356_win_19.mat  221023 RH 356_win_2.mat  221023 RH 356_win_20.mat  221023 RH 356_win_21.mat  221023 RH 356_win_22.mat  221023 RH 356_win_23.mat  221023 RH 356_win_24.mat  221023 RH 356_win_25.mat  221023 RH 356_win_26.mat  221023 RH 356_win_27.mat  221023 RH 356_win_28.mat  221023 RH 356_win_29.mat  221023 RH 356_win_3.mat  221023 RH 356_win_30.mat  221023 RH 356_win_31.mat  221023 RH 356_win_32.mat  221023 RH 356_win_33.mat  221023 RH 356_win_34.mat  221023 RH 356_win_35.mat  221023 RH 356_win_36.mat  221023 RH 356_win_37.mat  221023 RH 356_win_38.mat  221023 RH 356_win_39.mat  221023 RH 356_win_4.mat  221023 RH 356_win_40.mat  221023 RH 356_win_41.mat  221023 RH 356_win_42.mat  221023 RH 356_win_43.mat  221023 RH 356_win_44.mat  (+33 more)
sheba_real_signals_1024windows_07_Feb_24_Thorax/: 221023 RH 356_win_0.mat  (+72 more)
(+365 files in other folders)
