[project]
name = "backend"
version = "1.0.0"
dependencies = [
  "Flask>3.0.0"
]
requires-python = ">=3.10"
authors = [
  {name = "Doron Firman", email = "doronfi3@gmail.com"},
]
maintainers = [
  {name = "Doron Firman", email = "doronfi3@gmail.com"},
]
description = "Basic flask server for ECG data"
#readme = "README.rst"
#license = {file = "LICENSE.txt"}
keywords = ["AI", "ML", "ECG"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python :: 3.10"
]

[tool.setuptools]
packages = ["server", "instance"]